# sam-framework

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ASTER_TESTING.md  CLAUDE.md  LICENSE  Makefile  Progress.md  README.md  aster_test_results.json  main.py  pyproject.toml  pytest.ini  run_aster_test.sh
.streamlit/: config.toml
agents/: aster-futures-trader.agent.toml  coinbase-intelligence.agent.toml  dex-arbitrage-specialist.agent.toml  hyperliquid.agent.toml  kalshi-market-analyst.agent.toml  memecoin-trader.agent.toml  payai-facilitator-tester.agent.toml  polymarket-opportunity-hunter.agent.toml  portfolio-manager.agent.toml  research-analyst.agent.toml  risk-compliance.agent.toml  sam.agent.toml  solana-market-maker.agent.toml  uranus.agent.toml
examples/plugins/: README.md
examples/plugins/memory_mock/: backend.py
examples/plugins/secure_storage_dummy/: plugin.py
examples/plugins/simple_plugin/: plugin.py
examples/sdk/: README.md  event_listener.py
examples/streamlit_app/: app.py  styles.css  ui_shared.py
examples/streamlit_app/pages/: 10_Settings.py  15_Sessions.py  20_Wallet.py  30_Tools.py  40_About.py  sessions.py  settings.py  tools.py  wallet.py
reports/: final_report.md
sam/: cli.py  interactive_settings.py
sam/agents/: __init__.py  definition.py  manager.py
sam/api/: __init__.py  app.py  auth.py  db_storage.py  dependencies.py  public_storage.py  schemas.py  storage.py  user_secrets.py  utils.py
sam/api/middleware/: __init__.py  csrf.py  request_id.py
sam/api/routes/: __init__.py  agents.py  auth.py  health.py  onboarding.py  public_agents.py  secrets.py  sessions.py  users.py
sam/api/services/: __init__.py  onboarding.py
sam/cache/: __init__.py  base.py  engine.py  memory.py  redis.py
sam/commands/: __init__.py  agents.py  api.py  backup.py  config.py  health.py  keys.py  maintenance.py  migrations.py  onboard.py  plugins.py  providers.py
sam/config/: config_loader.py  plugin_allowlist.json  plugin_policy.py  profile_store.py  prompts.py  settings.py
sam/core/: agent.py  agent_factory.py  backup.py  builder.py  context.py  event_payloads.py  events.py  llm_provider.py  memory.py  memory_provider.py  middleware.py  migration_definitions.py  migrations.py  plugins.py  quotas.py  tools.py
sam/db/: __init__.py  base.py  engine.py  postgres.py  sqlite.py
sam/integrations/: aixbt.py  aster_futures.py  coinbase_x402.py  dexscreener.py  evm.py  hyperliquid.py  jupiter.py  kalshi.py  payai_facilitator.py  polymarket.py  pump_fun.py  search.py  smart_trader.py  uranus.py
sam/integrations/solana/: solana_tools.py
sam/utils/: ascii_loader.py  cache.py  circuit_breaker.py  cli_helpers.py  common_passwords.txt  config_validator.py  connection_pool.py  crypto.py  decorators.py  enhanced_decorators.py  env_files.py  error_handling.py  error_messages.py  http_client.py  memory_monitor.py  monitoring.py  password_policy.py  price_service.py  rate_limiter.py  sanitize.py  secure_storage.py  security.py  transaction_validator.py  validators.py  wallet_auth.py  wallets.py  x402_client_fixed.py
sam/web/: __init__.py  session.py
scripts/: check_x402_setup.py  setup-dev.sh  test.sh  test_x402_live.py
stubs/dexscreener/: __init__.pyi
tests/: conftest.py  test_agent.py  test_agent_failure_tool.py  test_aixbt.py  test_animation.py  test_aster_comprehensive.py  test_aster_futures.py  test_cli.py  test_cli_clear_context.py  test_coinbase_x402.py  test_commands_config.py  test_commands_health.py  test_commands_onboard.py  test_comprehensive.py  test_config.py  test_connection_pool.py  test_crypto.py  test_decorators.py  test_enhanced_decorators.py  test_error_handling.py  test_error_messages.py  test_event_payloads.py  test_events_bus.py  test_http_client.py  test_hyperliquid.py  test_integration.py  test_integrations.py  test_kalshi.py  test_llm_providers.py  test_memory.py  test_memory_backend_plugin.py  test_memory_clear_all_sessions.py  test_memory_list_sessions.py  test_memory_session_defaults.py  test_monitoring_price_security.py  test_payai_facilitator.py  test_plugin_policy.py  test_polymarket.py  test_rate_limiter.py  test_rate_limiter_env.py  (+13 more)
tests/api/: test_api.py
