[project]
name = "sam-framework"
version = "0.1.0"
description = "SAM (Solana Agent Middleware) - An AI agent framework for Solana blockchain operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "base58>=2.1.1",
    "cryptography>=42.0.0",
    "dexscreener>=1.3",
    "keyring>=25.0.0",
    "pydantic-sqlite>=0.4.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.0",
    "solana>=0.34.0,<0.36.0",
    "solders>=0.20.0,<0.22.0",
    "uvloop>=0.21.0",
]

[project.scripts]
sam = "sam.cli:app"

[dependency-groups]
dev = [
    "black>=24.4.2",
    "mypy>=1.10.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.6",
    "pytest-xprocess>=1.0.2",
    "ruff>=0.5.0",
    "sam-framework",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
sam-framework = { workspace = true }

[tool.uv]
package = true
