[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sam"]

[project]
name = "sam-framework"
version = "0.1.0"
description = "SAM (Solana Agent Middleware) - An AI agent framework for Solana blockchain operations and automated trading"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "prfa", email = "prfa@prfa.me"},
]
maintainers = [
    {name = "prfa", email = "prfa@prfa.me"},
]
keywords = [
    "solana",
    "blockchain",
    "ai-agent",
    "trading",
    "defi",
    "pump-fun",
    "jupiter",
    "dexscreener",
    "automation",
    "cryptocurrency",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "base58>=2.1.1",
    "cryptography>=42.0.0",
    "dexscreener>=1.3",
    "inquirer>=3.4.1",
    "keyring>=25.0.0",
    "psutil>=6.0.0",
    "pydantic-sqlite>=0.4.0",
    "python-dotenv>=1.0.1",
    "solana>=0.34.0,<0.36.0",
    "solders>=0.20.0,<0.22.0",
    "uvloop>=0.21.0",
]

[project.urls]
Homepage = "https://prfa.me"
Repository = "https://github.com/prfagit/sam-framework"
Issues = "https://github.com/prfagit/sam-framework/issues"
Documentation = "https://github.com/prfagit/sam-framework#readme"

[project.scripts]
sam = "sam.cli:app"

[dependency-groups]
dev = [
    "black>=24.4.2",
    "mypy>=1.10.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=6.2.1",
    "pytest-xprocess>=1.0.2",
    "ruff>=0.5.0",
    "sam-framework",
    "types-psutil>=7.0.0.20250822",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "performance: marks tests as performance tests",
]

[tool.ruff]
line-length = 100

[tool.mypy]
mypy_path = ["stubs"]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
sam-framework = { workspace = true }

[tool.uv]
package = true
